[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
discord-py = "^2.6.3"
flask = "^3.1.2"
requests = "^2.32.5"
psutil = "^7.0.0"
aiohttp = "^3.12.15"
cryptography = "^45.0.7"
httpx = "^0.28.1"
humanize = "^4.13.0"
loguru = "^0.7.3"
rich = "^14.1.0"
watchdog = "^6.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"